--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,6 @@
     margin: 0;
     padding: 0;
 }
-
 body{
     box-sizing: border-box;
     background-color: var(--cor-primaria);
@@ -25,7 +24,7 @@ body{
 }
 .cabecalho__menu{
     display: flex;
-    gap: 80px;
+    gap: 5rem;
 }
 .cabecalho__menu__link{
     font-family: var(--fonte-secundaria);
@@ -39,25 +38,28 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 82px;
+    gap: 5.1rem;
 }
 .apresentacao__conteudo{
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 2.5rem;
 }
 
 .apresentacao__conteudo__titulo{
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
+    line-height: 1.2em;
 }
+
 .titulo-destaque{
     color: var(--cor-terciaria);
 }
 .apresentacao__conteudo__texto{
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
+    line-height: 2.5rem;
 }
 
 .apresentacao__links{
@@ -65,7 +67,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 32px;
+    gap: 2rem;
 }
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
@@ -75,7 +77,7 @@ body{
 .apresentacao__links__botao{
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 1rem;
     border: 2px solid var(--cor-terciaria);
     width: 50%;
     text-align: center;
@@ -96,7 +98,7 @@ body{
 .rodape{
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
-    padding: 24px;
+    padding: 1.5rem;
     text-align: center;
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
@@ -104,18 +106,44 @@ body{
 }
 
 
-@media (max-width: 1200px) {
+@media screen and (max-width: 768px){
     .cabecalho{
          padding: 10%;  
+         
     }
     .cabecalho__menu{
-        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        gap: 1em;
+       
     }
+
+    .cabecalho__menu__link{
+        border: 1px dotted var(--cor-terciaria);
+    }
+
     .apresentacao{
         flex-direction: column-reverse;
         padding: 5%;
     }
+
     .apresentacao__conteudo{
         width: auto;
+    }
+
+
+    .apresentacao__links{
+        gap: 1em;
+    }
+
+    .apresentacao__links__seta{
+        padding: 0 50% 0;
+    }
+    .apresentacao__links__botao{
+        width: 100%;
+    }
+    .rodape{
+        padding: 1rem;
+        font-size: 1rem;
     }
 }
