--- a/styles/style.css
+++ b/styles/style.css
@@ -89,9 +89,7 @@ body{
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
 }
-.apresentacao__links__botao:hover{
-    background-color: var(--cor-hover);
-}
+
 .apresentacao__imagem{
     width: 50%;
 }
@@ -104,7 +102,10 @@ body{
     font-size: 1.5rem;
     font-weight: 400;
 }
-
+.apresentacao__links__botao:hover{
+    background-color: var(--cor-hover);
+    color: #008080;
+}
 
 @media screen and (max-width: 768px){
     .cabecalho{
@@ -131,7 +132,16 @@ body{
         width: auto;
     }
 
-
+    .apresentacao__conteudo__titulo{
+        font-size: 1.5rem;
+    }
+    .apresentacao__conteudo__subtitulo{
+        font-size: 1.25rem;
+    }
+    .apresentacao__conteudo__texto{
+        font-size: 1rem;
+    }
+    
     .apresentacao__links{
         gap: 1em;
     }
