--- a/styles/curriculo.css
+++ b/styles/curriculo.css
@@ -1,7 +1,8 @@
 .apresentacao__imagem{
-    padding: 0 50% 0;
+   
     width: 20rem;
     height: 20rem;
+    display:block;
 }
 
 ul{
@@ -24,7 +25,7 @@ ul{
 }
 
 .github{
-    padding: 1rem 0 1rem ;
+    padding: 2rem 0 1rem ;
 }
 
 .github__link{
@@ -44,10 +45,11 @@ ul{
     color: rgb(0, 128, 128);
 }
 @media screen and (max-width: 768px){
-    .apresentacao__conteudo__texto{
-        font-size: 1.5rem;
+    .apresentacao__imagem{
+        width: 75%;
+        height: 75%;
     }
-    .idioma{
-        font-size: 1.5rem;
+    .idiomas{
+        font-size: 1.25rem;
     }
 }
