Melhora na exibição do conteúdo|Adição de hover|Mudança de cores|Adição de borda.

--- a/styles/curriculo.css
+++ b/styles/curriculo.css
@@ -34,7 +34,15 @@ ul{
 }
 
 .apresentacao__conteudo__subtitulo{
+    width: 100%;
+    margin-top: 1.5rem;
     font-size: 2rem;
+    text-align: left;
+}
+.apresentacao__conteudo ul{
+    width: 100%;
+    align-items:start;
+    text-align: left;
 }
 
 .idiomas{
